cmake_minimum_required(VERSION 3.14)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/ft_printf/includes)
include_directories(libft/includes)
include_directories(resources)
include_directories(resources/vm_champs)

add_executable(corewar
    includes/asm.h
    includes/asm_instructions.h
    includes/ass_to_bytecode.h
    includes/op.h
    libft/ft_printf/includes/header.h
    libft/ft_printf/src/check_base_prec.c
    libft/ft_printf/src/check_digit_prec.c
    libft/ft_printf/src/check_digit_sign.c
    libft/ft_printf/src/check_form.c
    libft/ft_printf/src/check_settings.c
    libft/ft_printf/src/delete_zero.c
    libft/ft_printf/src/ft_printf.c
    libft/ft_printf/src/ft_str_prec.c
    libft/ft_printf/src/ftoa_prec_e.c
    libft/ft_printf/src/ftoa_prec_eg.c
    libft/ft_printf/src/ftoa_prec_f.c
    libft/ft_printf/src/ftoa_prec_fg.c
    libft/ft_printf/src/get_exponent.c
    libft/ft_printf/src/get_flag.c
    libft/ft_printf/src/get_mod.c
    libft/ft_printf/src/get_prec_num_e.c
    libft/ft_printf/src/get_prec_num_f.c
    libft/ft_printf/src/get_precision.c
    libft/ft_printf/src/get_spec.c
    libft/ft_printf/src/get_tag.c
    libft/ft_printf/src/get_width.c
    libft/ft_printf/src/init_char_arg.c
    libft/ft_printf/src/init_flag.c
    libft/ft_printf/src/init_int_arg.c
    libft/ft_printf/src/init_long_double.c
    libft/ft_printf/src/init_prec_arg.c
    libft/ft_printf/src/init_str_arg.c
    libft/ft_printf/src/init_wchar_arg.c
    libft/ft_printf/src/init_wstr_arg.c
    libft/ft_printf/src/nan_inf.c
    libft/ft_printf/src/parse_and_print.c
    libft/ft_printf/src/print_base.c
    libft/ft_printf/src/print_base_pre.c
    libft/ft_printf/src/print_base_width.c
    libft/ft_printf/src/print_char.c
    libft/ft_printf/src/print_char_width.c
    libft/ft_printf/src/print_digit.c
    libft/ft_printf/src/print_digit_sign.c
    libft/ft_printf/src/print_digit_width.c
    libft/ft_printf/src/print_invalid_spec.c
    libft/ft_printf/src/print_invalid_width.c
    libft/ft_printf/src/print_null_char.c
    libft/ft_printf/src/print_null_str.c
    libft/ft_printf/src/print_prec_e.c
    libft/ft_printf/src/print_prec_f.c
    libft/ft_printf/src/print_prec_g.c
    libft/ft_printf/src/print_prec_width.c
    libft/ft_printf/src/print_ptraddr.c
    libft/ft_printf/src/print_ptraddr_width.c
    libft/ft_printf/src/print_str.c
    libft/ft_printf/src/print_str_width.c
    libft/ft_printf/src/print_wchar.c
    libft/ft_printf/src/print_wchar_minus.c
    libft/ft_printf/src/print_wstr.c
    libft/ft_printf/src/print_wstr_minus.c
    libft/ft_printf/src/ptraddr_prec.c
    libft/ft_printf/src/put_wc.c
    libft/ft_printf/src/put_wchar.c
    libft/ft_printf/src/put_wstr.c
    libft/ft_printf/src/put_wstr_c.c
    libft/ft_printf/src/spec_base.c
    libft/ft_printf/src/spec_char.c
    libft/ft_printf/src/spec_int.c
    libft/ft_printf/src/spec_non_printable.c
    libft/ft_printf/src/spec_percent.c
    libft/ft_printf/src/spec_precision.c
    libft/ft_printf/src/spec_ptraddr.c
    libft/ft_printf/src/spec_return.c
    libft/ft_printf/src/spec_unsint.c
    libft/ft_printf/src/spec_wchar.c
    libft/includes/libft.h
    libft/src/ft_abs.c
    libft/src/ft_atoi.c
    libft/src/ft_atoi_base.c
    libft/src/ft_bzero.c
    libft/src/ft_free_split_array.c
    libft/src/ft_ftoa.c
    libft/src/ft_has_prefix.c
    libft/src/ft_isalnum.c
    libft/src/ft_isalpha.c
    libft/src/ft_isascii.c
    libft/src/ft_isdigit.c
    libft/src/ft_isdigit_base.c
    libft/src/ft_islower.c
    libft/src/ft_isnumber.c
    libft/src/ft_isprint.c
    libft/src/ft_isspace.c
    libft/src/ft_isupper.c
    libft/src/ft_itoa.c
    libft/src/ft_lst_push_back.c
    libft/src/ft_lst_size.c
    libft/src/ft_lstadd.c
    libft/src/ft_lstdel.c
    libft/src/ft_lstdelone.c
    libft/src/ft_lstiter.c
    libft/src/ft_lstmap.c
    libft/src/ft_lstnew.c
    libft/src/ft_ltoa.c
    libft/src/ft_ltoa_base.c
    libft/src/ft_max.c
    libft/src/ft_memalloc.c
    libft/src/ft_memccpy.c
    libft/src/ft_memchr.c
    libft/src/ft_memcmp.c
    libft/src/ft_memcpy.c
    libft/src/ft_memdel.c
    libft/src/ft_memmove.c
    libft/src/ft_memset.c
    libft/src/ft_min.c
    libft/src/ft_putarr.c
    libft/src/ft_putchar.c
    libft/src/ft_putchar_fd.c
    libft/src/ft_putendl.c
    libft/src/ft_putendl_fd.c
    libft/src/ft_putmem.c
    libft/src/ft_putnbr.c
    libft/src/ft_putnbr_fd.c
    libft/src/ft_putstr.c
    libft/src/ft_putstr_fd.c
    libft/src/ft_splitdel.c
    libft/src/ft_strcat.c
    libft/src/ft_strchr.c
    libft/src/ft_strchri.c
    libft/src/ft_strclr.c
    libft/src/ft_strcmp.c
    libft/src/ft_strcpy.c
    libft/src/ft_strdel.c
    libft/src/ft_strdup.c
    libft/src/ft_strequ.c
    libft/src/ft_striter.c
    libft/src/ft_striteri.c
    libft/src/ft_strjoin.c
    libft/src/ft_strlcat.c
    libft/src/ft_strlen.c
    libft/src/ft_strlower.c
    libft/src/ft_strmap.c
    libft/src/ft_strmapi.c
    libft/src/ft_strncat.c
    libft/src/ft_strncmp.c
    libft/src/ft_strncpy.c
    libft/src/ft_strndup.c
    libft/src/ft_strnequ.c
    libft/src/ft_strnew.c
    libft/src/ft_strnstr.c
    libft/src/ft_strrchr.c
    libft/src/ft_strrev.c
    libft/src/ft_strsplit.c
    libft/src/ft_strsplit_len.c
    libft/src/ft_strstr.c
    libft/src/ft_strsub.c
    libft/src/ft_strtrim.c
    libft/src/ft_tolower.c
    libft/src/ft_toupper.c
    libft/src/ft_ultoa.c
    libft/src/ft_ultoa_base.c
    libft/src/ft_wstrlen.c
    libft/src/get_next_line.c
#    resources/vm_champs/op.c
#    resources/vm_champs/op.h
#    resources/op.c
#    resources/op.h
    src/asm/ass_to_bytecode/ass_to_bytecode.c
    src/asm/ass_to_bytecode/auxiliary.c
    src/asm/ass_to_bytecode/auxiliary2.c
    src/asm/ass_to_bytecode/auxiliary3.c
    src/asm/ass_to_bytecode/data_creation.c
    src/asm/ass_to_bytecode/data_processing.c
    src/asm/ass_to_bytecode/pasring.c
    src/asm/ass_to_bytecode/terminates.c
    src/asm/asm.c libft/src/ft_atoi32.c src/asm/ass_to_bytecode/writing.c src/asm/ass_to_bytecode/data_processing_classes.c src/asm/ass_to_bytecode/data_processing_arguments.c)
