cmake_minimum_required(VERSION 3.14)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libft/inc)

add_executable(corewar
        inc/common.h
        inc/asm_instructions.h
        inc/asm.h
        inc/op.h
        libft/inc/header.h
        libft/inc/libft.h
        libft/src/check_base_prec.c
        libft/src/check_digit_prec.c
        libft/src/check_digit_sign.c
        libft/src/check_form.c
        libft/src/check_settings.c
        libft/src/delete_zero.c
        libft/src/ft_abs.c
        libft/src/ft_atoi.c
        libft/src/ft_atoi32.c
        libft/src/ft_atoi_base.c
        libft/src/ft_bzero.c
        libft/src/ft_free_split_array.c
        libft/src/ft_ftoa.c
        libft/src/ft_has_prefix.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isdigit_base.c
        libft/src/ft_islower.c
        libft/src/ft_isnumber.c
        libft/src/ft_isprint.c
        libft/src/ft_isspace.c
        libft/src/ft_isupper.c
        libft/src/ft_itoa.c
        libft/src/ft_lst_push_back.c
        libft/src/ft_lst_size.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_ltoa.c
        libft/src/ft_ltoa_base.c
        libft/src/ft_max.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_min.c
        libft/src/ft_printf.c
        libft/src/ft_putarr.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putmem.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_splitdel.c
        libft/src/ft_str_prec.c
        libft/src/ft_str_tolower.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strchri.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strlower.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strndup.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strrev.c
        libft/src/ft_strsplit.c
        libft/src/ft_strsplit_len.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_ultoa.c
        libft/src/ft_ultoa_base.c
        libft/src/ft_wstrlen.c
        libft/src/ftoa_prec_e.c
        libft/src/ftoa_prec_eg.c
        libft/src/ftoa_prec_f.c
        libft/src/ftoa_prec_fg.c
        libft/src/get_exponent.c
        libft/src/get_flag.c
        libft/src/get_mod.c
        libft/src/get_next_line.c
        libft/src/get_prec_num_e.c
        libft/src/get_prec_num_f.c
        libft/src/get_precision.c
        libft/src/get_spec.c
        libft/src/get_tag.c
        libft/src/get_width.c
        libft/src/init_char_arg.c
        libft/src/init_flag.c
        libft/src/init_int_arg.c
        libft/src/init_long_double.c
        libft/src/init_prec_arg.c
        libft/src/init_str_arg.c
        libft/src/init_wchar_arg.c
        libft/src/init_wstr_arg.c
        libft/src/nan_inf.c
        libft/src/parse_and_print.c
        libft/src/print_base.c
        libft/src/print_base_pre.c
        libft/src/print_base_width.c
        libft/src/print_char.c
        libft/src/print_char_width.c
        libft/src/print_digit.c
        libft/src/print_digit_sign.c
        libft/src/print_digit_width.c
        libft/src/print_invalid_spec.c
        libft/src/print_invalid_width.c
        libft/src/print_null_char.c
        libft/src/print_null_str.c
        libft/src/print_prec_e.c
        libft/src/print_prec_f.c
        libft/src/print_prec_g.c
        libft/src/print_prec_width.c
        libft/src/print_ptraddr.c
        libft/src/print_ptraddr_width.c
        libft/src/print_str.c
        libft/src/print_str_width.c
        libft/src/print_wchar.c
        libft/src/print_wchar_minus.c
        libft/src/print_wstr.c
        libft/src/print_wstr_minus.c
        libft/src/ptraddr_prec.c
        libft/src/put_wc.c
        libft/src/put_wchar.c
        libft/src/put_wstr.c
        libft/src/put_wstr_c.c
        libft/src/spec_base.c
        libft/src/spec_char.c
        libft/src/spec_int.c
        libft/src/spec_non_printable.c
        libft/src/spec_percent.c
        libft/src/spec_precision.c
        libft/src/spec_ptraddr.c
        libft/src/spec_return.c
        libft/src/spec_unsint.c
        libft/src/spec_wchar.c
        src/asm/asm.c
        src/asm/ass_to_bytecode.c
        src/asm/auxiliary.c
        src/asm/auxiliary2.c
        src/asm/auxiliary3.c
        src/asm/data_add_to_lst.c
        src/asm/data_creation.c
        src/asm/data_free.c
        src/asm/data_processing.c
        src/asm/data_processing_arguments.c
        src/asm/data_processing_classes.c
        src/asm/pasring.c
        src/asm/terminates.c
        src/asm/terminates1.c
        src/asm/writing.c
        inc/corewar.h
        inc/corewar_instructions.h
        inc/terminate_errors.h
        src/vm/vm.c
        src/vm/data_creation.c
        src/vm/reading_bytecode.c
        src/vm/parse_flags.c
        src/vm/parse_flags1.c
        src/vm/auxiliary.c
        src/vm/data_add_to_lst.c
        src/vm/display.c
        src/vm/battle.c
        src/vm/validation.c
        src/vm/counting.c
        src/vm/carriage_kill.c
        src/vm/inst_1_4.c
        src/vm/inst_5_8.c
        src/vm/inst_9_12.c
        src/vm/inst_13_16.c
        src/vm/verbose.c
        src/vm/visualize.c src/vm/memory_free.c src/vm/visualize_prepare.c src/vm/visualize_proc.c src/vm/visualize_auxiliary.c src/vm/visualize_win.c src/vm/visualize_info.c src/vm/visualize_menu.c)
